; ModuleID = '/home/carl/AnghaBench/db_tutorial/extr_db.c_initialize_leaf_node.c'
source_filename = "/home/carl/AnghaBench/db_tutorial/extr_db.c_initialize_leaf_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NODE_LEAF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @initialize_leaf_node(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = load i32, i32* @NODE_LEAF, align 4
  %5 = call i32 @set_node_type(i8* %3, i32 %4)
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @set_node_root(i8* %6, i32 0)
  %8 = load i8*, i8** %2, align 8
  %9 = call i64* @leaf_node_num_cells(i8* %8)
  store i64 0, i64* %9, align 8
  %10 = load i8*, i8** %2, align 8
  %11 = call i64* @leaf_node_next_leaf(i8* %10)
  store i64 0, i64* %11, align 8
  ret void
}

declare dso_local i32 @set_node_type(i8*, i32) #1

declare dso_local i32 @set_node_root(i8*, i32) #1

declare dso_local i64* @leaf_node_num_cells(i8*) #1

declare dso_local i64* @leaf_node_next_leaf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
